[package]
name = "time-teller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
chrono = "0.4.23"

[dependencies.serenity]
version = "0.11.5"
default-features = false
features = ["builder", "cache", "collector", "client", "gateway", "http", "model", "rustls_backend", "tokio_task_builder", "utils"]

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt-multi-thread"]